--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -276,7 +276,7 @@
   }
   
 
-/* Quick Order For Woocommerce */
+/* Manual Order For Woocommerce */
 
 .mofw-form-wrapper {
   margin-right: 20px;
@@ -368,3 +368,4 @@
 .select2-selection__arrow {
   margin: 10px;
 }
+
