--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,3 +11,5 @@
 * coderstime
 */
 #ctss-modal{display:none}#TB_ajaxContent{display:flex;justify-content:center;align-items:center}.ctss-modal-content p{font-size:20px}.note_area{margin-top:20px}.select2-container{width:100%!important}.select2-selection{font-size:14px;outline:0;min-height:48px;text-align:left}.select2-selection__rendered{margin:10px}.select2-selection__arrow{margin:10px}
+.select2-container--default .select2-selection--multiple .select2-selection__choice__remove{color: #525252;margin-right: 5px;float: right;margin-left: 10px;font-size: 20px;line-height: 25px;}
+.select2-container .select2-search--inline .select2-search__field{padding-left: 10px;}
